--- a/src/GUI/ModManager/Styling/Resources.axaml
+++ b/src/GUI/ModManager/Styling/Resources.axaml
@@ -1,7 +1,4 @@
-<ResourceDictionary
-	xmlns="https://github.com/avaloniaui"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:controls="using:ModManager.Controls">
+<ResourceDictionary xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="using:ModManager.Controls">
 	<!--<ControlTheme
 		x:Key="{x:Type controls:ComboBoxWithRightClick}"
 		BasedOn="{StaticResource {x:Type ComboBox}}"
