--- a/src/GUI/ModManager/Styling/ColorThemes/Dracula.axaml
+++ b/src/GUI/ModManager/Styling/ColorThemes/Dracula.axaml
@@ -1,30 +1,29 @@
-<ResourceDictionary xmlns="https://github.com/avaloniaui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Design.PreviewWith>
-        <Border Padding="20">
-            <!-- Add Controls for Previewer Here -->
-        </Border>
-    </Design.PreviewWith>
-    <ResourceDictionary.ThemeDictionaries>
-        <ResourceDictionary x:Key="Dark">
-            <Color x:Key="SukiBackground">#282A36</Color>
-            <Color x:Key="SukiStrongBackground">#282A36</Color>
-            <Color x:Key="SukiLightBackground">#282A36</Color>
-            <Color x:Key="SukiCardBackground">#282A36</Color>
-            <Color x:Key="SukiGlassCardBackground">#282A36</Color>
-            <Color x:Key="SukiGlassCardOpaqueBackground">#222222</Color>
-            <Color x:Key="SukiControlTouchBackground">#44475A</Color>
-            <Color x:Key="SukiDialogBackground">#000000</Color>
-			
-            <Color x:Key="SukiBorderBrush">#282A36</Color>
-            <Color x:Key="SukiControlBorderBrush">#606060</Color>
-            <Color x:Key="SukiMediumBorderBrush">#555555</Color>
-            <Color x:Key="SukiLightBorderBrush">#454545</Color>
-            <Color x:Key="GlassBorderBrush">#252729</Color>
+<ResourceDictionary xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+	<Design.PreviewWith>
+		<Border Padding="20">
+			<!--  Add Controls for Previewer Here  -->
+		</Border>
+	</Design.PreviewWith>
+	<ResourceDictionary.ThemeDictionaries>
+		<ResourceDictionary x:Key="Dark">
+			<!--<Color x:Key="SukiBackground">#282A36</Color>-->
+			<Color x:Key="SukiStrongBackground">#282A36</Color>
+			<!--<Color x:Key="SukiLightBackground">#282A36</Color>-->
+			<Color x:Key="SukiCardBackground">#282A36</Color>
+			<Color x:Key="SukiGlassCardBackground">#282A36</Color>
+			<Color x:Key="SukiGlassCardOpaqueBackground">#282A36</Color>
+			<Color x:Key="SukiControlTouchBackground">#44475A</Color>
+			<Color x:Key="SukiDialogBackground">#000000</Color>
 
-            <Color x:Key="SukiText">#F8F8F2</Color>
-            <Color x:Key="SukiLowText">#C8F8F2</Color>
-            <Color x:Key="SukiDisabledText">#ca727272</Color>
-        </ResourceDictionary>
-    </ResourceDictionary.ThemeDictionaries>
+			<Color x:Key="SukiBorderBrush">#282A36</Color>
+			<Color x:Key="SukiControlBorderBrush">#606060</Color>
+			<Color x:Key="SukiMediumBorderBrush">#555555</Color>
+			<Color x:Key="SukiLightBorderBrush">#454545</Color>
+			<Color x:Key="GlassBorderBrush">#252729</Color>
+
+			<Color x:Key="SukiText">#F8F8F2</Color>
+			<Color x:Key="SukiLowText">#C8F8F2</Color>
+			<Color x:Key="SukiDisabledText">#ca727272</Color>
+		</ResourceDictionary>
+	</ResourceDictionary.ThemeDictionaries>
 </ResourceDictionary>
