--- a/src/GUI/ModManager/Styling/ColorThemes/General.axaml
+++ b/src/GUI/ModManager/Styling/ColorThemes/General.axaml
@@ -15,6 +15,8 @@
 			<Color x:Key="ModListHoveredCellSelectedBackground">#5168b8</Color>
 			<Color x:Key="ModListHoveredCellBorder">#A9A9C0</Color>
 
+			<Color x:Key="ModListCardBackground">#282A36</Color>
+
 		</ResourceDictionary>
 	</ResourceDictionary.ThemeDictionaries>
 </ResourceDictionary>
