--- a/src/GUI/ModManager/App.axaml
+++ b/src/GUI/ModManager/App.axaml
@@ -77,6 +77,7 @@
 	</Application.Resources>
 
 	<Application.Styles>
+		<FluentTheme />
 		<suki:SukiTheme ThemeColor="Blue" />
 		<materialIcons:MaterialIconStyles />
 		<StyleInclude Source="avares://AsyncImageLoader.Avalonia/AdvancedImage.axaml" />
